--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <groupId>org.examples.java</groupId>
     <artifactId>helloworld</artifactId>
     <packaging>jar</packaging>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0-RELEASE</version>
     <name>helloworld</name>
     <url>http://maven.apache.org</url>
     <dependencies>
@@ -131,4 +131,17 @@
             </build>
         </profile>
     </profiles>
+    <distributionManagement>
+        <repository>
+            <id>deployment</id>
+            <name>Internal Releases</name>
+            <url>http://172.17.0.4:8081/repository/Release-djs/</url>
+	    <!-- url>http://192.168.56.101:8081/repository/Release-djs/</url> -->
+        </repository>
+        <snapshotRepository>
+            <id>deployment</id>
+            <name>Internal Snapshot Release</name>
+            <url>http://172.17.0.4:8081/repository/Snapshot-djs/</url>
+        </snapshotRepository>
+    </distributionManagement>
 </project>
